# exert-mcu

./: mosfet.md  readme.md  triode.md
arduinodemo/: app.ino  readme.md
arduinodemo/demo1/: demo1.ino
arduinodemo/wifiapdemo/: wifiapdemo.ino
arduinodemo/wifiscanasyncdemo/: wifiscanasyncdemo.ino
arduinodemo/wifiscandemo/: wifiscandemo.ino
arduinodemo/wifismartdemo/: wifismartdemo.ino
arduinodemo/wifistademo/: wifistademo.ino
arduinodemo/ws2812demo/: ws2812demo.ino
ch55x/: readme.md
ch55x/ch552gdemo/: CMakeLists.txt  CMakeSettings.json
ch55x/ch552gdemo/cmake/: CH552GProject.cmake
ch55x/ch552gdemo/inc/: ch552_adc.h  ch552_gpio.h  ch552_pwm.h  ch552_sys.h  ch552_timer.h  ch552_uart.h  ch552_usb.h
ch55x/ch552gdemo/led_3631as/: CMakeLists.txt
ch55x/ch552gdemo/led_3631as/src/: main.c
ch55x/ch552gdemo/led_3631as_74hc595/: CMakeLists.txt
ch55x/ch552gdemo/led_3631as_74hc595/src/: main.c
ch55x/ch552gdemo/led_3641as_tm1650/: CMakeLists.txt
ch55x/ch552gdemo/led_3641as_tm1650/src/: main.c  tm1650.c  tm1650.h
ch55x/ch552gdemo/led_rx/: CMakeLists.txt
ch55x/ch552gdemo/led_rx/src/: main.c
ch55x/ch552gdemo/led_simple/: CMakeLists.txt
ch55x/ch552gdemo/led_simple/src/: main.c
ch55x/ch552gdemo/pwm_simple/: CMakeLists.txt
ch55x/ch552gdemo/src/: main.c
ch55x/ch552gdemo/timer_simple/: CMakeLists.txt
ch55x/ch552gdemo/timer_simple/src/: main.c
ch55x/ch552gdemo/uart_simple/: CMakeLIsts.txt
ch55x/ch552gdemo/uart_simple/src/: main.c
ch55x/ch552gdemo/usb_simple/: CMakeLists.txt
ch55x/ch552gdemo/usb_simple/src/: ch552.h  ch552_usb.h  main.c
ch55x/ch552gdemo/waveform/: CMakeLists.txt
ch55x/ch552gdemo/waveform/src/: main.c
ch55x/ch552gdemo/xl2400/: CMakeLists.txt
ch55x/ch552tdemo/: CMakeLists.txt  CMakeSettings.json
cmakedemo/armstm32/: CMakeLists.txt  CMakeSettings.json  Readme.md
cmakedemo/armstm32/cmake/: STM32Build.cmake
cmakedemo/armstm32/f10x/: CMakeLists.txt
cmakedemo/armstm32/f40x/: CMakeLists.txt
esp32/: readme.md
esp32/idfdemo/: .gitignore
esp32/pydemo/: bmp280_i2c.py  button.py  button_board.py  buzzer.py  buzzer_board.py  buzzer_pwm.py  dht11.py  ds1302.py  ds18b20.py  hcsr04.py  joyticks.py  laser.py  lcd1602_i2c.py  led_board.py  led_rg.py  led_rgb_pwm.py  lm393_sensor_board.py  mfrc522_read.py  mfrc522_write.py  motor_servo_pwm.py  motor_stepper_uln2003_28byj_48.py  motor_uln2003_pwm.py  mpu6050_i2c.py  rain_detector_adc.py  readme.md  relay.py  rotary_encoder.py  sensor.py  sensor_adc.py  ssd1306_i2c.py  tm1637.py  wifi_http.py  wifi_http_server.py  ws2812_board_spi.py
esp8266/: ky039_adc.py  readme.md
esp8266/pydemo/: max30102_i2c.py
esp8285/: readme.md
espidfdemo/: readme.md
espidfdemo/httpclientdemo/: CMakeLists.txt  Readme.md  partitions.csv  sdkconfig.ci  test_server.py
espidfdemo/httpserverdemo/: CMakeLists.txt  test_client.py
espidfdemo/otademo/: .gitignore  CMakeLists.txt  Readme.md  partitions.csv  pytest_simple_ota.py  test_server.py
espidfdemo/spiffsdemo/: .gitignore  CMakeLists.txt  Readme.md  sdkconfig.ci
espidfdemo/wifiscandemo/: CMakeLists.txt  partitions.csv  sdkconfig.ci
espidfdemo/wifistademo/: CMakeLists.txt  Readme.md
gd32/: .gitignore
gd32/e230c8t6/: e230c8t6+Target_1.cbuild.yml  e230c8t6+Target_1.cprj  e230c8t6.cbuild-idx.yml  e230c8t6.cbuild-pack.yml  e230c8t6.cproject.yml  e230c8t6.csolution.yml  e230c8t6.uvprojx  main.c
gd32/e230c8t6v2/: adc_joytick.c  adc_joytick.h  dma_init.c  dma_init.h  e230c8t6v2.uvprojx  gpio_init.c  gpio_init.h  main.c  rcu_init.c  rcu_init.h  sys_tick.c  sys_tick.h  usart_print.c  usart_print.h
gd32/f103c8t6/: all.h  f103c8t6.uvprojx  main.c
mcs51/: .gitignore  readme.md
mcs51/at89s52/: CMakeLists.txt  CMakeSettings.json
mcs51/at89s52/src/: main.c
pinout/: 74hc595.xcf  rp2040_purple_back.xcf  ultimate_rp2040.xcf
py32/f002/: f002.cbuild-pack.yml  f002.csolution.yml
py32/f002a/f002a/tmp/f002a/PY32F002Ax5/Release/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake
py32keil/: .gitignore  readme.md
py32keil/f002a/: f002a.uvguix.chens  f002a.uvoptx  f002a.uvprojx  main.c
py32keil/f002a_i2c_tm1650/: f002a_i2c_tm1650.uvguix.chens  f002a_i2c_tm1650.uvoptx  f002a_i2c_tm1650.uvprojx  main.c  main.h  py32f0xx_hal_msp.c  py32f0xx_it.c
py32keil/f002a_usart/: f002a_usart.uvguix.chens  f002a_usart.uvoptx  f002a_usart.uvprojx  main.c
py32keil/f002a_usart_it/: f002a_usart_it.uvguix.chens  f002a_usart_it.uvoptx  f002a_usart_it.uvprojx  main.c  py32f0xx_hal_msp.c  py32f0xx_it.c
rp2040/: readme.md
rp2040/ydiyblack1/: main.py
rp2040/ydiyblack1cp/: joystick.py
rp2040/ydiyblack3cp/: joystick.py
stm32/: .gitignore  readme.md
stm32/f103c6t6_spi_nrf24l01/: .cproject  .mxproject  .project  f103c6t6_spi_nrf24l01 Debug.launch  f103c6t6_spi_nrf24l01.ioc
stm32/f103c6t6a/: .cproject  .mxproject  .project  f103c6t6a Debug.launch  f103c6t6a.ioc
stm32/f103c6t6a_empty/: .cproject  .project  f103c6t6a_empty.launch
stm32/f103c6t6a_uart/: .cproject  .mxproject  .project  f103c6t6a_uart Debug.launch  f103c6t6a_uart.ioc
stm32/f103c6t6a_usb/: .cproject  .mxproject  .project  f103c6t6a_usb.ioc  readme.md
stm32/f103c8t6_bare/: .cproject  .project  f103c8t6_bare.launch
stm32/f103c8t6_usb/: .cproject  .mxproject  .project  f103c8t6_usb Debug.launch  f103c8t6_usb.ioc
stm32/f103c8t6_usb_vcom/: .cproject  .project  f103c8t6_usb_vcom Debug.launch  f103c8t6_usb_vcom.ioc
stm32/f401ccu6_spi_nrf24l01/: .cproject  .project  f401ccu6_spi_nrf24l01 Debug.launch  f401ccu6_spi_nrf24l01.ioc
stm32/f401rct6/: .cproject  .project  f401rct6 Debug.launch  f401rct6.ioc
stm32/f401rct6_adc_joyticks/: .cproject  .mxproject  .project  f401rct6_adc_joyticks Debug.launch  f401rct6_adc_joyticks.ioc
stm32keil/: .gitignore
stm32rs/: Cargo.toml  Readme.md
stm32rs/f401rct6/: Cargo.toml
stm32rs/f401rct6_rtic_usb_cdc_echo/: Cargo.toml
stm32rsg/: Readme.md
stm32rsg/f401rct6_usb_serial_irq/: Cargo.toml  Embed.toml
stm32rsg/f401rct6_usb_serial_irq/.cargo/: config.toml
stm8/: readme.md
w80x/: .gitignore  readme.md
(+380 files in other folders)
